--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "file-saver": "^2.0.2",
+    "jszip": "^3.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-images-upload": "^1.2.7",
+    "react-scripts": "3.0.1",
+    "reactackle": "^1.1.3",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "start": "react-scripts start",
